# 3DShapes

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildConfig.cmake
libraries/: CMakeLists.txt
libraries/shapes/: CMakeLists.txt
libraries/shapes/examples/: CMakeLists.txt  main.cpp
libraries/shapes/examples/console/: CMakeLists.txt  main.cpp
libraries/shapes/examples/gui/: CMakeLists.txt  OGL.cpp  OGL.h  OGL.rc  build.bat  log.txt
libraries/shapes/include/: Aakaar.h
libraries/shapes/include/detail/: AakaarUtils.h  Api.h
libraries/shapes/src/: Aakaar.cpp  Cylinder.cpp
libraries/shapes/src/detail/: AakaarUtils.cpp
